# peace-eye

./: .eslintrc.yml  .prettierrc  LICENSE  README.md  index.html  package.json  prettier.config.cjs  tailwind.config.cjs
.github/workflows/: build.yaml  clippy.yaml  eslint.yaml  prettier.yaml  release.yaml  rustfmt.yaml
src/: AirportMarker.tsx  App.tsx  BraaInfo.tsx  ConnectView.tsx  ControlPanel.tsx  CursorInfo.tsx  MainView.tsx  ObjectInfo.tsx  ObjectMarker.tsx  SettingsModal.tsx  Spinner.tsx  Symbol.tsx  entity.ts  geomagnetism.d.ts  hook.ts  objectSettings.ts  settings.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/data/terrain/: caucasus.json  marianaislands.json  nevada.json  normandy.json  persiangulf.json  syria.json  thechannel.json
src/dcs/: aircraft.ts
src/dcs/terrain/: caucasus.ts  index.ts  marianaislands.ts  nevada.ts  normandy.ts  persiangulf.ts  syria.ts  thechannel.ts
src/tacview/: index.ts
src/tacview/record/: objectProperty.ts
tools/terrain-data-generator/: .gitignore  README.md  pyproject.toml
tools/terrain-data-generator/terrain_data_generator/: __init__.py
