[package]
name = "peace-eye"
version = "0.1.0"
description = "Desktop GCI/AWACS simulator for Tacview and DCS World"
authors = ["Kangwook Lee <pbzweihander@gmail.com>"]
license = "MIT"
repository = "https://github.com/pbzweihander/peace-eye"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
tacview-realtime-client = { git = "https://github.com/pbzweihander/tacview-realtime-client-rs.git", rev = "59e0d8421875dadb2e6720d29c9175127f01ef66" }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
time = { version = "0.3.17", features = ["parsing", "formatting", "serde"] }
tokio = { version = "1.25.0", features = ["time", "sync", "parking_lot"] }
tracing = "0.1.37"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
